[package]
name = "core_war"
version = "0.1.0"
authors = ["Dino Costantini <dino.costantini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = true
#codegen-units = 1
#panic = 'abort'

[dependencies]
crossterm = "*"
sdl2 = "*"
clap = { version = "3.0", features = ["derive"] }